[metadata]
name = create_workspace
version = 0.3
description = "Tool which can create directories and files from yaml"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mitzkia/create-workspace
author = Andras Mitzki
author_email = mitzkia@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:

[options.entry_points]
console_scripts =
    create-workspace=create_workspace.create_workspace:main
